@@ -19,6 +19,7 @@ package org.red5.server.api;
  * 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA 
  */
 
+import java.util.Collection;
 import java.util.Iterator;
 import java.util.Set;
 
@@ -152,7 +153,7 @@ public interface IScope extends IBasicScope, ResourcePatternResolver,
 	 * 
 	 * @return Iterator holding all connections
 	 */
-	public Iterator<IConnection> getConnections();
+	public Collection<Set<IConnection>> getConnections();
 
 	/**
 	 * Lookup connections.
