@@ -12,6 +12,8 @@ Bugfixes:
 - RemotingClient decoding errors (Jira APPSERVER-296)
 - Codec typos (Jira APPSERVER-309)
 - Exception is thrown when doing NetStream.seek operation (Jira SN-94)
+- Scope access does not work if invoked from external Application (Jira APPSERVER-306)
+- Childscopes not visible on customly created scopes (Jira APPSERVER-298)
 
 Red5 0.8.0 RC1 (2008-09-29)
 ---------------------------
